# claude-trading-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  README.ja.md  README.md  app.py  bootstrap.py  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/skills/trade-assistant/: SKILL.md
.github/workflows/: ci.yml
agent/: __init__.py  client.py  sanitizer.py
agent/tests/: test_registry.py  test_sanitizer.py
config/: __init__.py  settings.py
config/tests/: test_settings.py
scripts/: query_agent.py  run_all_tests.sh
scripts/hooks/: check_no_absolute_paths.py
skills/: __init__.py  registry.py
skills/breakout-trade-planner/: SKILL.md
skills/breakout-trade-planner/scripts/: plan_breakout_trades.py  risk_calculator.py
skills/breakout-trade-planner/scripts/tests/: test_plan_breakout_trades.py
skills/canslim-screener/scripts/: fmp_client.py
skills/ftd-detector/scripts/: fmp_client.py
skills/ibd-distribution-day-monitor/scripts/tests/: conftest.py  helpers.py  test_data_loader.py  test_distribution_day_tracker.py  test_exposure_policy.py  test_history_utils.py  test_math_utils.py  test_report_generator.py  test_risk_classifier.py
skills/vcp-screener/scripts/: screen_vcp.py
